# lib/db/src/schema/index.ts
@@ -6,4 +6,5 @@ export * from "./hours";
 export * from "./sitePhotos";
 export * from "./groupContent";
 export * from "./aboutContent";
+export * from "./menuMarquee";
 export * from "./messages";
